corrected element_propre function

--- a/ACP.ipynb
+++ b/ACP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "(300, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x121a88040>"
+       "<seaborn.axisgrid.PairGrid at 0x11275bca0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[300 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,16 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1223fed60>"
+       "<seaborn.axisgrid.PairGrid at 0x12b70cb50>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "       [ 0.28657579,  0.55343869,  0.09272279,  0.77651943]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "array([1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "         1.00000000e+00]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "(300, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -726,16 +726,16 @@
      "output_type": "stream",
      "text": [
       "matrice de covariance \n",
-      "[[ 2.12097353e+00  1.49267443e-16 -1.10502466e-15  3.02990631e-16]\n",
-      " [ 1.49267443e-16  1.53478223e-02 -3.11902121e-17  1.59849837e-16]\n",
-      " [-1.10502466e-15 -3.11902121e-17  5.09186579e-01 -1.18819855e-17]\n",
-      " [ 3.02990631e-16  1.59849837e-16 -1.18819855e-17  1.35449207e+00]]\n",
+      "[[ 2.12097353e+00  1.49638755e-16 -1.10205416e-15  2.79226660e-16]\n",
+      " [ 1.49638755e-16  1.53478223e-02 -3.00762759e-17  1.66997594e-16]\n",
+      " [-1.10205416e-15 -3.00762759e-17  5.09186579e-01 -8.91148916e-18]\n",
+      " [ 2.79226660e-16  1.66997594e-16 -8.91148916e-18  1.35449207e+00]]\n",
       "\n",
       "matrice de correlation \n",
-      "[[ 1.00000000e+00  8.27321079e-16 -1.06332462e-15  1.78761233e-16]\n",
-      " [ 8.27321079e-16  1.00000000e+00 -3.52822662e-16  1.10866563e-15]\n",
-      " [-1.06332462e-15 -3.52822662e-16  1.00000000e+00 -1.43074525e-17]\n",
-      " [ 1.78761233e-16  1.10866563e-15 -1.43074525e-17  1.00000000e+00]]\n"
+      "[[ 1.00000000e+00  8.29379092e-16 -1.06046622e-15  1.64740745e-16]\n",
+      " [ 8.29379092e-16  1.00000000e+00 -3.40221853e-16  1.15824010e-15]\n",
+      " [-1.06046622e-15 -3.40221853e-16  1.00000000e+00 -1.07305894e-17]\n",
+      " [ 1.64740745e-16  1.15824010e-15 -1.07305894e-17  1.00000000e+00]]\n"
      ]
     }
    ],
@@ -771,7 +771,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x122bdab80>"
+       "<seaborn.axisgrid.PairGrid at 0x12b362d90>"
       ]
      },
      "execution_count": 17,
@@ -802,50 +802,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.870431979624489 found\n"
+      "2.120965611631313 found\n",
+      "1.3544920737358197 found\n",
+      "0.5091865779637582 found\n",
+      "0.01534782229623434 found\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 26\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[38;5;28mprint\u001b[39m(lambdas[i], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfound\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lambdas, vi\n\u001b[0;32m---> 26\u001b[0m \u001b[43melement_propre\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcorr_matrice_cr\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[32], line 18\u001b[0m, in \u001b[0;36melement_propre\u001b[0;34m(A, precision)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n):\n\u001b[1;32m     17\u001b[0m     A \u001b[38;5;241m=\u001b[39m A \u001b[38;5;241m-\u001b[39m (lambdas[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m/\u001b[39mnp\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(vi[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mouter(vi[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], vi[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 18\u001b[0m     vi[:, i] \u001b[38;5;241m=\u001b[39m \u001b[43miterate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvi\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m     lambdas[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean((A\u001b[38;5;129m@vi\u001b[39m[:, i])\u001b[38;5;241m/\u001b[39mvi[:, i])\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lambdas[i], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfound\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[32], line 10\u001b[0m, in \u001b[0;36melement_propre.<locals>.iterate\u001b[0;34m(v)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(v0\u001b[38;5;241m-\u001b[39mvn) \u001b[38;5;241m>\u001b[39m precision:\n\u001b[1;32m      9\u001b[0m     v0 \u001b[38;5;241m=\u001b[39m vn\n\u001b[0;32m---> 10\u001b[0m     vn \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;129;43m@v0\u001b[39;49m\u001b[43m)\u001b[49m)\u001b[38;5;241m*\u001b[39mA\u001b[38;5;129m@v0\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vn\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mnorm\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/numpy/linalg/linalg.py:2512\u001b[0m, in \u001b[0;36mnorm\u001b[0;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[1;32m   2510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2511\u001b[0m     sqnorm \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mdot(x)\n\u001b[0;32m-> 2512\u001b[0m ret \u001b[38;5;241m=\u001b[39m \u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[43msqnorm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2513\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keepdims:\n\u001b[1;32m   2514\u001b[0m     ret \u001b[38;5;241m=\u001b[39m ret\u001b[38;5;241m.\u001b[39mreshape(ndim\u001b[38;5;241m*\u001b[39m[\u001b[38;5;241m1\u001b[39m])\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "(array([2.12096561, 1.35449207, 0.50918658, 0.01534782]),\n",
+       " array([[ 0.52241169, -0.3699247 ,  0.67760196, -0.36206918],\n",
+       "        [ 0.64881249,  0.27039267,  0.02719112,  0.7107698 ],\n",
+       "        [-0.47329609,  0.43249386,  0.72905329,  0.23962015],\n",
+       "        [-0.28656447, -0.77652597,  0.09272279,  0.5534387 ]]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def element_propre(A, precision=10**-2):\n",
+    "def element_propre(A, precision=10**-5, maxiter=10**9):\n",
     "    n= A.shape[0]\n",
     "    lambdas = np.zeros((n,))\n",
     "    vi = np.zeros((n,n))\n",
     "    def iterate(v):\n",
     "        v0 = v.copy()\n",
     "        vn = (1/np.linalg.norm(A@v0))*A@v0\n",
+    "        i = 0\n",
     "        while np.linalg.norm(v0-vn) > precision:\n",
     "            v0 = vn\n",
     "            vn = (1/np.linalg.norm(A@v0))*A@v0\n",
+    "            i += 1\n",
+    "            # if i == maxiter:\n",
+    "            #     break\n",
     "        return vn\n",
     "   \n",
     "    v0 = np.ones((n,))\n",
     "    vi[:, 0] = iterate(v0)\n",
     "    lambdas[0] = ((A@vi[:, 0])/vi[:, 0])[0]\n",
+    "    print(lambdas[0], \"found\")\n",
     "    for i in range(1, n):\n",
-    "        A = A - (lambdas[i-1]/np.linalg.norm(vi[i-1])**2)*np.outer(vi[i-1], vi[i-1])\n",
+    "        A = A - (lambdas[i-1]/np.linalg.norm(vi[:,i-1])**2)*np.outer(vi[:,i-1], vi[:,i-1])\n",
     "        vi[:, i] = iterate(vi[:, i-1])\n",
     "        lambdas[i] = ((A@vi[:, i])/vi[:, i])[0]\n",
     "        print(lambdas[i], \"found\")\n",
@@ -859,25 +866,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.5224063 , -0.36206924,  0.67760196,  0.36993663],\n",
-       "       [-0.64881643,  0.71076979,  0.02719112, -0.27037786],\n",
-       "       [ 0.47328978,  0.23962009,  0.72905329, -0.43250467],\n",
-       "       [ 0.28657579,  0.55343869,  0.09272279,  0.77651943]])"
+       "(array([2.12097353, 0.01534782, 0.50918658, 1.35449207]),\n",
+       " array([[-0.5224063 , -0.36206924,  0.67760196,  0.36993663],\n",
+       "        [-0.64881643,  0.71076979,  0.02719112, -0.27037786],\n",
+       "        [ 0.47328978,  0.23962009,  0.72905329, -0.43250467],\n",
+       "        [ 0.28657579,  0.55343869,  0.09272279,  0.77651943]]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vec_p"
+    "val_p, vec_p # computed by nulpy"
    ]
   },
   {
