remove np.linalg.inv usage in our get_inv function

--- a/TP6_resolution_systemes_lineaires.ipynb
+++ b/TP6_resolution_systemes_lineaires.ipynb
@@ -615,9 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v6/gjxkdclj08sbj2vczb74wtxr0000gn/T/ipykernel_31987/2330187754.py:7: RuntimeWarning: divide by zero encountered in divide\n",
+      "  M[mask_eye] = np.diag(1/M)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -627,19 +635,33 @@
        "       [-0.17757009,  0.39252336, -0.3271028 ,  0.12616822]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def get_inv_diag(M):\n",
+    "    \"\"\"\n",
+    "    calcule l'inverse d\"une matrice diagonal)\n",
+    "    \"\"\"\n",
+    "    n = M.shape[0]\n",
+    "    mask_eye = np.eye(n) == 1\n",
+    "    M[mask_eye] = np.diag(1/M)\n",
+    "    return M\n",
+    "\n",
+    "def apply_zeros_mask(A):\n",
+    "    zeros_mask = lambda M: np.abs(M) < 10**(-14)\n",
+    "    A[zeros_mask(A)] = 0\n",
+    "    return A\n",
+    "\n",
     "def get_inv(A):\n",
     "    n = A.shape[0]\n",
     "    Ag = A.copy()\n",
     "    M = np.eye(n)\n",
     "    for i in range(0, n-1):\n",
     "        M_down = Mr(Ag,i, n)[0]\n",
-    "        Ag = M_down@Ag \n",
+    "        Ag = M_down@Ag\n",
     "        M = M_down@M\n",
     "\n",
     "    for i in range(n-1, -1, -1):\n",
@@ -647,12 +669,9 @@
     "        Ag = M_up@Ag \n",
     "        M = M_up@M\n",
     "\n",
-    "    return np.linalg.inv(Ag)@M\n",
+    "    return get_inv_diag(Ag)@M\n",
     "\n",
-    "def apply_zeros_mask(A):\n",
-    "    zeros_mask = lambda M: 10**(-14) < M < 10**(-14)\n",
-    "    A[zeros_mask(A)] = 0\n",
-    "    return A\n",
+    "\n",
     "\n",
     "get_inv(A)\n",
     "\n",
