coorected tensor reshaped for more generality

--- a/M1_SID/Optimisation pour apprentissage/TP_QP_points_intérieurs_2.ipynb
+++ b/M1_SID/Optimisation pour apprentissage/TP_QP_points_intérieurs_2.ipynb
@@ -341,8 +341,8 @@
     "    # construire les lignes de la Jacobienne\n",
     "    # inserer votre code ici\n",
     "    J1 = np.hstack((P, -A.T, -np.eye(N)))\n",
-    "    J2 = np.hstack((A, np.array([[0]]), np.zeros((1, N))))\n",
-    "    J3 = np.hstack((np.diag(s), np.zeros((N, 1)), np.diag(x)))\n",
+    "    J2 = np.hstack((A, np.array([[0]]), np.zeros((nb_constraint, N))))\n",
+    "    J3 = np.hstack((np.diag(s), np.zeros((N, nb_constraint)), np.diag(x)))\n",
     "    \n",
     "    \n",
     "    # construire la Jacobienne\n",
